--- a/pom.xml
+++ b/pom.xml
@@ -19,15 +19,9 @@
 	<name>pet-clinic</name>
 	<description>Pet Clinic Project</description>
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
-	<dependencies>
 
-
-
-
-
-	</dependencies>
 
 	<build>
 		<plugins>
@@ -44,6 +38,23 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<configuration>
+						<goal>install</goal>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
+<scm>
+	<developerConnection>scm:git:https://github.com/Ibrahim12N/pet-clinic.git</developerConnection>
+</scm>
+
+
+
 
 </project>
