modify a plugin for maven in pom

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 	<description>Pet Clinic Project</description>
 	<properties>
 		<java.version>11</java.version>
+		<maven.javadoc.skip>true</maven.javadoc.skip>
 	</properties>
 
 
@@ -36,18 +37,25 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+				</configuration>
+			</plugin>
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-maven-plugin</artifactId>
-					<configuration>
-						<goal>install</goal>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
+<!--		<pluginManagement>-->
+<!--			<plugins>-->
+<!--				<plugin>-->
+<!--					<groupId>org.springframework.boot</groupId>-->
+<!--					<artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--					<configuration>-->
+<!--						<goal>install</goal>-->
+<!--					</configuration>-->
+<!--				</plugin>-->
+<!--			</plugins>-->
+<!--		</pluginManagement>-->
 	</build>
 <scm>
 	<developerConnection>scm:git:https://github.com/Ibrahim12N/pet-clinic.git</developerConnection>
