--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -112,9 +112,9 @@
                 <version>2.22.2</version>
                 <dependencies>
                     <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit-platform.version}</version>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
